--- a/index.html
+++ b/index.html
@@ -4,42 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NestFinder - Redirecting...</title>
-    <!-- Redirect to Production URL -->
-    <meta http-equiv="refresh" content="0; url=https://nestfinder-sa1g.onrender.com">
-    <script>
-        window.location.href = "https://nestfinder-sa1g.onrender.com";
-    </script>
+    <title>NestFinder</title>
     <style>
-        body {
-            font-family: system-ui, -apple-system, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        body,
+        html {
             margin: 0;
-            background-color: #0f172a;
-            color: #fff;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
         }
 
-        .container {
-            text-align: center;
-        }
-
-        a {
-            color: #38bdf8;
+        iframe {
+            display: block;
+            width: 100%;
+            height: 100%;
+            border: none;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <h1>🐦 NestFinder</h1>
-        <p>Redirecting to application...</p>
-        <p>
-            <a href="https://nestfinder-sa1g.onrender.com">Click here if not redirected automatically</a>
-        </p>
-    </div>
+    <iframe src="https://nestfinder-sa1g.onrender.com" title="NestFinder Application"></iframe>
 </body>
 
 </html>
