Fix: Enable geolocation in iframe

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <iframe src="https://nestfinder-sa1g.onrender.com" title="NestFinder Application"></iframe>
+    <iframe src="https://nestfinder-sa1g.onrender.com" title="NestFinder Application" allow="geolocation"></iframe>
 </body>
 
 </html>
