--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <iframe id="app-frame" src="https://nestfinder-sa1g.onrender.com" title="NestFinder Application"
-        allow="geolocation *; camera *; microphone *"></iframe>
+        allow="geolocation *"></iframe>
 
     <script>
         // Check current URL to see if we should load a specific page
