fix(share): harden share modal (portal scope, div button, iframe permissions)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         🔐 IMPORTANT: allow="geolocation" is required for iframe to request location
         This grants permission delegation from parent to child frame
     -->
-    <iframe src="https://nestfinder-sa1g.onrender.com" title="NestFinder Application" allow="geolocation"></iframe>
+    <iframe src="https://nestfinder-sa1g.onrender.com" title="NestFinder Application"
+        allow="geolocation; web-share; clipboard-write"></iframe>
 
     <!-- Fallback link for mobile users experiencing issues -->
     <a href="https://nestfinder-sa1g.onrender.com" class="fallback" target="_blank">
