--- a/admin/index.html
+++ b/admin/index.html
@@ -7,8 +7,7 @@
   <title>NestFinder Admin</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js"></script>
   <!-- Use same font as client -->
-  <link rel="icon"
-    href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E%F0%9F%AA%B9%3C/text%3E%3C/svg%3E" />
+  <link rel="icon" type="image/svg+xml" href="/admin-panel/favicon.svg" />
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap"
     rel="stylesheet" />
