--- a/admin/index.html
+++ b/admin/index.html
@@ -7,7 +7,7 @@
   <title>NestFinder Admin</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js"></script>
   <!-- Use same font as client -->
-  <link rel="icon" type="image/svg+xml" href="/admin-panel/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap"
     rel="stylesheet" />
