--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NestFinder</title>
+    <title>NestFinder - Finding Nests for Those Without One</title>
+    <meta name="description" content="Track and coordinate homeless assistance locations">
     <style>
         body,
         html {
@@ -12,7 +13,7 @@
             padding: 0;
             height: 100%;
             overflow: hidden;
-            background-color: #0f172a;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
         }
 
         iframe {
@@ -21,21 +22,70 @@
             height: 100%;
             border: none;
         }
+
+        .fallback {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #667eea;
+            color: white;
+            padding: 12px 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            font-size: 14px;
+            z-index: 9999;
+            text-decoration: none;
+            transition: transform 0.2s;
+        }
+
+        .fallback:hover {
+            transform: scale(1.05);
+        }
+
+        @media (max-width: 768px) {
+            .fallback {
+                display: block;
+            }
+        }
     </style>
 </head>
 
 <body>
-    <iframe id="app-frame" src="https://nestfinder-sa1g.onrender.com" title="NestFinder Application"
-        allow="geolocation *"></iframe>
+    <!-- 
+        🔐 IMPORTANT: allow="geolocation" is required for iframe to request location
+        This grants permission delegation from parent to child frame
+    -->
+    <iframe src="https://nestfinder-sa1g.onrender.com" title="NestFinder Application"
+        allow="geolocation; web-share; clipboard-write"></iframe>
+
+    <!-- Fallback link for mobile users experiencing issues -->
+    <a href="https://nestfinder-sa1g.onrender.com" class="fallback" target="_blank">
+        📍 Having issues? Open directly
+    </a>
 
     <script>
-        // Check current URL to see if we should load a specific page
-        const path = window.location.pathname;
-        const iframe = document.getElementById('app-frame');
+        // Generic routing support for iframe
+        // forwards subpaths (like /admin-panel) to the underlying service
+        // without hardcoding sensitive path names.
+        try {
+            const path = window.location.pathname;
+            const iframe = document.querySelector('iframe');
 
-        // If the URL contains 'admin-panel', update the iframe src
-        if (path.includes('/admin-panel')) {
-            iframe.src = "https://nestfinder-sa1g.onrender.com/admin-panel";
+            // Check if we have a path to forward (ignoring the repo base path /nestfinder)
+            // This regex captures the path after the first segment (e.g. /nestfinder/foo -> /foo)
+            // or treats the path as root if it's just the base
+            const match = path.match(/^\/[^/]+(.*)$/);
+            const subPath = match ? match[1] : path;
+
+            if (subPath && subPath.length > 1 && iframe) {
+                const targetUrl = new URL(iframe.src);
+                // Clean double slashes just in case
+                targetUrl.pathname = subPath.replace('//', '/');
+                iframe.src = targetUrl.href;
+            }
+        } catch (e) {
+            console.debug('Routing initialization skipped');
         }
     </script>
 </body>
