--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             height: 100%;
             overflow: hidden;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            background-color: #0f172a;
         }
 
         iframe {
@@ -22,32 +23,6 @@
             width: 100%;
             height: 100%;
             border: none;
-        }
-
-        .fallback {
-            display: none;
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: #667eea;
-            color: white;
-            padding: 12px 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-            font-size: 14px;
-            z-index: 9999;
-            text-decoration: none;
-            transition: transform 0.2s;
-        }
-
-        .fallback:hover {
-            transform: scale(1.05);
-        }
-
-        @media (max-width: 768px) {
-            .fallback {
-                display: block;
-            }
         }
     </style>
 </head>
@@ -59,11 +34,6 @@
     -->
     <iframe src="https://nestfinder-sa1g.onrender.com" title="NestFinder Application"
         allow="geolocation; web-share; clipboard-write"></iframe>
-
-    <!-- Fallback link for mobile users experiencing issues -->
-    <a href="https://nestfinder-sa1g.onrender.com" class="fallback" target="_blank">
-        📍 Having issues? Open directly
-    </a>
 
     <script>
         // Generic routing support for iframe
