--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NestFinder</title>
-    <link rel="icon" type="image/svg+xml" href="/nestfinder/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/nestfinder/assets/favicon.svg" />
     <style>
         body,
         html {
