--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NestFinder - Finding Nests for Those Without One</title>
     <meta name="description" content="Track and coordinate homeless assistance locations">
-    <link rel="icon" type="image/svg+xml" href="/nestfinder/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/nestfinder/assets/favicon.svg" />
     <style>
         body,
         html {
